{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 65,
  "lineage": "3b8f71e5-747e-1f6c-3af5-3a21ddae1123",
  "resources": [
    {
      "module": "module.cloudfront",
      "mode": "data",
      "type": "aws_lb",
      "name": "aws_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "sandbox-s3-lb-log-ecs-fargate-437642037048",
                "enabled": true,
                "prefix": "test"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:437642037048:loadbalancer/app/sandbox-fargate-lb/738be19616d8ba98",
            "arn_suffix": "app/sandbox-fargate-lb/738be19616d8ba98",
            "dns_name": "sandbox-fargate-lb-1634216151.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:437642037048:loadbalancer/app/sandbox-fargate-lb/738be19616d8ba98",
            "idle_timeout": 120,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sandbox-fargate-lb",
            "security_groups": [
              "sg-02fd2fff3d70b4767"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00762a383f40c9705"
              },
              {
                "subnet_id": "subnet-0db42e90214a3df18"
              }
            ],
            "subnets": [
              "subnet-00762a383f40c9705",
              "subnet-0db42e90214a3df18"
            ],
            "tags": {
              "Environment": "sandbox",
              "Tenant": "sandbox"
            },
            "vpc_id": "vpc-027e37658884e13b8",
            "zone_id": "Z1H1FL5HABSF5"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0313dac70cb92e38f",
            "public_dns": "ec2-52-12-43-117.us-west-2.compute.amazonaws.com",
            "public_ip": "52.12.43.117",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "sandbox",
              "Name": "sandbox-ecs-fargate-nat-0",
              "Tenant": "sandbox"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-031721f36ae5142cb",
            "public_dns": "ec2-52-42-31-239.us-west-2.compute.amazonaws.com",
            "public_ip": "52.42.31.239",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "sandbox",
              "Name": "sandbox-ecs-fargate-nat-1",
              "Tenant": "sandbox"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:437642037048:internet-gateway/igw-0a7190615e0597545",
            "id": "igw-0a7190615e0597545",
            "owner_id": "437642037048",
            "tags": {
              "Environment": "sandbox",
              "Name": "sandbox-ecs-fargate",
              "Tenant": "sandbox"
            },
            "vpc_id": "vpc-027e37658884e13b8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "sandbox-s3-lb-log-ecs-fargate-437642037048",
                "enabled": true,
                "prefix": "test"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:437642037048:loadbalancer/app/sandbox-fargate-lb/738be19616d8ba98",
            "arn_suffix": "app/sandbox-fargate-lb/738be19616d8ba98",
            "dns_name": "sandbox-fargate-lb-1634216151.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:437642037048:loadbalancer/app/sandbox-fargate-lb/738be19616d8ba98",
            "idle_timeout": 120,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sandbox-fargate-lb",
            "security_groups": [
              "sg-02fd2fff3d70b4767"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00762a383f40c9705"
              },
              {
                "subnet_id": "subnet-0db42e90214a3df18"
              }
            ],
            "subnets": [
              "subnet-00762a383f40c9705",
              "subnet-0db42e90214a3df18"
            ],
            "tags": {
              "Environment": "sandbox",
              "Tenant": "sandbox"
            },
            "vpc_id": "vpc-027e37658884e13b8",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.alb.aws_security_group.default",
            "module.s3_access_log.aws_s3_bucket.default",
            "module.s3_lb_log.aws_s3_bucket.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:437642037048:listener/app/sandbox-fargate-lb/738be19616d8ba98/75e58efaab4e532d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "ok",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:437642037048:listener/app/sandbox-fargate-lb/738be19616d8ba98/75e58efaab4e532d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:437642037048:loadbalancer/app/sandbox-fargate-lb/738be19616d8ba98",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_lb.default",
            "module.alb.aws_security_group.default",
            "module.s3_access_log.aws_s3_bucket.default",
            "module.s3_lb_log.aws_s3_bucket.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "redirect_http_to_https",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "http",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:437642037048:targetgroup/sandbox-fargate-lb/b7d579563621cdb6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:437642037048:listener-rule/app/sandbox-fargate-lb/738be19616d8ba98/75e58efaab4e532d/613db0c422ee9959",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:437642037048:listener-rule/app/sandbox-fargate-lb/738be19616d8ba98/75e58efaab4e532d/613db0c422ee9959",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:437642037048:listener/app/sandbox-fargate-lb/738be19616d8ba98/75e58efaab4e532d",
            "priority": 1
          },
          "dependencies": [
            "module.alb.aws_lb.default",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_target_group.default",
            "module.alb.aws_security_group.default",
            "module.s3_access_log.aws_s3_bucket.default",
            "module.s3_lb_log.aws_s3_bucket.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "https",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:437642037048:targetgroup/sandbox-fargate-lb/b7d579563621cdb6",
            "arn_suffix": "targetgroup/sandbox-fargate-lb/b7d579563621cdb6",
            "deregistration_delay": 600,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 200,
                "matcher": "200",
                "path": "/management/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 120,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:437642037048:targetgroup/sandbox-fargate-lb/b7d579563621cdb6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "sandbox-fargate-lb",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "sandbox",
              "Tenant": "sandbox"
            },
            "target_type": "ip",
            "vpc_id": "vpc-027e37658884e13b8"
          },
          "dependencies": [
            "module.alb.aws_lb.default",
            "module.alb.aws_security_group.default",
            "module.s3_access_log.aws_s3_bucket.default",
            "module.s3_lb_log.aws_s3_bucket.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0313dac70cb92e38f",
            "id": "nat-0bcc18713440a54fc",
            "network_interface_id": "eni-0e897cf45968b0784",
            "private_ip": "17.255.0.153",
            "public_ip": "52.12.43.117",
            "subnet_id": "subnet-00762a383f40c9705",
            "tags": {
              "Environment": "sandbox",
              "Name": "sandbox-ecs-fargate-0",
              "Tenant": "sandbox"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-031721f36ae5142cb",
            "id": "nat-04948a2691cb4c99a",
            "network_interface_id": "eni-029ba10e3b2404a3d",
            "private_ip": "17.255.1.165",
            "public_ip": "52.42.31.239",
            "subnet_id": "subnet-0db42e90214a3df18",
            "tags": {
              "Environment": "sandbox",
              "Name": "sandbox-ecs-fargate-1",
              "Tenant": "sandbox"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:437642037048:network-acl/acl-01ff1484c5d6284fd",
            "egress": [],
            "id": "acl-01ff1484c5d6284fd",
            "ingress": [],
            "owner_id": "437642037048",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0369aea93650ebb56",
              "subnet-06e61cf3ee9016d0c"
            ],
            "tags": {
              "Environment": "sandbox",
              "Name": "sandbox-ecs-fargate-private",
              "Tenant": "sandbox"
            },
            "vpc_id": "vpc-027e37658884e13b8"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:437642037048:network-acl/acl-079b0924834e1dce3",
            "egress": [],
            "id": "acl-079b0924834e1dce3",
            "ingress": [],
            "owner_id": "437642037048",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-00762a383f40c9705",
              "subnet-0db42e90214a3df18"
            ],
            "tags": {
              "Environment": "sandbox",
              "Name": "sandbox-ecs-fargate-public",
              "Tenant": "sandbox"
            },
            "vpc_id": "vpc-027e37658884e13b8"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2006319522",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-01ff1484c5d6284fd",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "dependencies": [
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1668388696",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-01ff1484c5d6284fd",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "dependencies": [
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-136963846",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-079b0924834e1dce3",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2998226767",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-079b0924834e1dce3",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02db89193d13375d01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0bcc18713440a54fc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02db89193d13375d0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.default",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09523d0c9337059161080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-04948a2691cb4c99a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09523d0c933705916",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.default",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a7190615e0597545",
            "id": "r-rtb-0eba8ae521230dc4a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eba8ae521230dc4a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02db89193d13375d0",
            "owner_id": "437642037048",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "sandbox",
              "Name": "sandbox-ecs-fargate-private-0",
              "Tenant": "sandbox"
            },
            "vpc_id": "vpc-027e37658884e13b8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09523d0c933705916",
            "owner_id": "437642037048",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "sandbox",
              "Name": "sandbox-ecs-fargate-private-1",
              "Tenant": "sandbox"
            },
            "vpc_id": "vpc-027e37658884e13b8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0eba8ae521230dc4a",
            "owner_id": "437642037048",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "sandbox",
              "Name": "sandbox-ecs-fargate-public",
              "Tenant": "sandbox"
            },
            "vpc_id": "vpc-027e37658884e13b8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fc8f44f8e0952b5",
            "route_table_id": "rtb-02db89193d13375d0",
            "subnet_id": "subnet-0369aea93650ebb56"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d13f938d8c2775a",
            "route_table_id": "rtb-09523d0c933705916",
            "subnet_id": "subnet-06e61cf3ee9016d0c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7b59cf6429b6e6f",
            "route_table_id": "rtb-0eba8ae521230dc4a",
            "subnet_id": "subnet-00762a383f40c9705"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5575602555f8935",
            "route_table_id": "rtb-0eba8ae521230dc4a",
            "subnet_id": "subnet-0db42e90214a3df18"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:437642037048:security-group/sg-02fd2fff3d70b4767",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02fd2fff3d70b4767",
            "ingress": [],
            "name": "sandbox-fargate-lb-alb",
            "name_prefix": null,
            "owner_id": "437642037048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "sandbox",
              "Name": "sandbox-fargate-lb-alb",
              "Tenant": "sandbox"
            },
            "timeouts": null,
            "vpc_id": "vpc-027e37658884e13b8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fargate",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:437642037048:security-group/sg-0b75f74bbdf820a8e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b75f74bbdf820a8e",
            "ingress": [],
            "name": "sandbox-task-definition-ecs-fargate",
            "name_prefix": null,
            "owner_id": "437642037048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "sandbox",
              "Name": "sandbox-task-definition-ecs-fargate",
              "Tenant": "sandbox"
            },
            "timeouts": null,
            "vpc_id": "vpc-027e37658884e13b8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-security-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:437642037048:security-group/sg-00d7546b2801ef031",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00d7546b2801ef031",
            "ingress": [],
            "name": "sandboxdbservice-sg-name",
            "name_prefix": null,
            "owner_id": "437642037048",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-027e37658884e13b8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1092102557",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02fd2fff3d70b4767",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.alb.aws_security_group.default",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fargate",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-436667334",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b75f74bbdf820a8e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.ecs_fargate.aws_security_group.default",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fargate",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-2994032982",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b75f74bbdf820a8e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "module.alb.aws_lb.default",
            "module.alb.aws_lb_target_group.default",
            "module.alb.aws_security_group.default",
            "module.ecs_fargate.aws_security_group.default",
            "module.s3_access_log.aws_s3_bucket.default",
            "module.s3_lb_log.aws_s3_bucket.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_http",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2675271771",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02fd2fff3d70b4767",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.alb.aws_security_group.default",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_https",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2937322180",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00d7546b2801ef031",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.rds.aws_security_group.rds-security-group",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds-security-group-rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-255143478",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00d7546b2801ef031",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "module.rds.aws_security_group.rds-security-group",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:437642037048:subnet/subnet-0369aea93650ebb56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "17.255.2.0/24",
            "id": "subnet-0369aea93650ebb56",
            "map_public_ip_on_launch": false,
            "owner_id": "437642037048",
            "tags": {
              "Environment": "sandbox",
              "Name": "sandbox-ecs-fargate-private-0",
              "Tenant": "sandbox"
            },
            "vpc_id": "vpc-027e37658884e13b8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:437642037048:subnet/subnet-06e61cf3ee9016d0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "17.255.3.0/24",
            "id": "subnet-06e61cf3ee9016d0c",
            "map_public_ip_on_launch": false,
            "owner_id": "437642037048",
            "tags": {
              "Environment": "sandbox",
              "Name": "sandbox-ecs-fargate-private-1",
              "Tenant": "sandbox"
            },
            "vpc_id": "vpc-027e37658884e13b8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:437642037048:subnet/subnet-00762a383f40c9705",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "17.255.0.0/24",
            "id": "subnet-00762a383f40c9705",
            "map_public_ip_on_launch": true,
            "owner_id": "437642037048",
            "tags": {
              "Environment": "sandbox",
              "Name": "sandbox-ecs-fargate-public-0",
              "Tenant": "sandbox"
            },
            "vpc_id": "vpc-027e37658884e13b8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:437642037048:subnet/subnet-0db42e90214a3df18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "17.255.1.0/24",
            "id": "subnet-0db42e90214a3df18",
            "map_public_ip_on_launch": true,
            "owner_id": "437642037048",
            "tags": {
              "Environment": "sandbox",
              "Name": "sandbox-ecs-fargate-public-1",
              "Tenant": "sandbox"
            },
            "vpc_id": "vpc-027e37658884e13b8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:437642037048:vpc/vpc-027e37658884e13b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "17.255.0.0/16",
            "default_network_acl_id": "acl-0f4b29366382822c1",
            "default_route_table_id": "rtb-048c060a35b7d3432",
            "default_security_group_id": "sg-09028b1ea139f8d30",
            "dhcp_options_id": "dopt-7115b809",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-027e37658884e13b8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-048c060a35b7d3432",
            "owner_id": "437642037048",
            "tags": {
              "Environment": "sandbox",
              "Name": "sandbox-ecs-fargate",
              "Tenant": "sandbox"
            }
          }
        }
      ]
    }
  ]
}